[package]
name = "configure"
version = "0.1.0"
authors = ["ParkJuhyeong <majecty@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
confy = "0.4.0"
serde = "1.0.117"
serde_derive = "1.0.117"
toml = "0.5.7"
structopt = "0.3"
